syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.smartretail";
option java_outer_classname = "InventoryProto";


service InventoryService {
  rpc GetInventory (GetInventoryRequest) returns (GetInventoryResponse) {}
  rpc UpdateInventory (stream UpdateInventoryRequest) returns (UpdateInventoryResponse) {}
}

message GetInventoryRequest {
  string productId = 1;
}

message GetInventoryResponse {
  string productId = 1;
  int32 quantity = 2;
}

message UpdateInventoryRequest {
  string productId = 1;
  int32 quantity = 2;
}

message UpdateInventoryResponse {
  bool success = 1;
}